<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Sapelli Collector</string>
    <string name="sapelli">Sapelli</string>
    <string name="collector">Collector</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="not_available">n/a</string>
    <string name="neww">New</string>
    <string name="add">Add</string>
    <string name="addEtc">Add&#8230;</string>
    <string name="edit">Edit</string>
    <string name="editEtc">Edit&#8230;</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="manage">Manage</string>
    <string name="manageEtc">Manage&#8230;</string>
    <string name="by_ucl_excites_html"><![CDATA[<a href="http://sapelli.org">Sapelli</a> is a project by <a href="http://ucl.ac.uk/excites">UCL ExCiteS</a> &amp; collaborators.]]></string>
	<string name="license"><![CDATA[<a href="http://github.com/ExCiteS/Sapelli">Source code available</a> under the terms of the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.]]></string>
	<string name="determiningDeviceID">Determining device ID …</string>
	<string name="pleaseLeaveAirplaneMode">In order to initialise the application for first use, please take your device out of Airplane Mode.</string>
	<string name="project_manager">Project Manager</string>
    <string name="switch_project">Switch to project:</string>
    <string name="no_projects">No projects loaded.</string>
    <string name="tab_main">Main</string>
    <string name="tab_transmission">Transmission</string>
    <string name="tab_details">Details</string>
    <string name="run_project">Run project</string>
    <string name="remove_project">Remove project</string>
    <string name="add_new_project">Add project</string>
    <string name="load_project">Load project</string>
    <string name="browse">Browse</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_url_title">Load project from URL</string>
    <string name="enterURLMsg">Please enter a URL (or local path) from which to fetch a Sapelli project file:</string>
    <string name="software_and_device_info">App &amp; device info</string>
    <string name="shortcut">Shortcut</string>
    <string name="take_photo">Take photo</string>
    <string name="transmission_settings">Transmission Settings</string>
    <string name="copy_db_menuitem">Dump databases</string>
    <string name="about">About</string>
    <string name="statistics">Statistics</string>
    <string name="export_records">Export records</string>
    <string name="import_records_menuitem">Import records</string>
    <string name="importStartFailed">Failed to start record import from: %s</string>
    <string name="importFailed">Error upon importing records: %s</string>
    <string name="importSuccess">Import succesfull. Added %1$s new records, updated %2$s existing records, and skipped %3$s duplicates.</string>
    <string name="importStoreFailed">Error upon storing imported records: %s</string>
    <string name="schemaFormNotFound">Could not find matching project/form (Project:Form = %s)</string>
    <string name="delete_data">Delete data</string>
    <string name="in_export">In- &amp; export</string>
    <string name="more_options">Additional options</string>
    <string name="settings">Settings</string>
    <string name="pleaseSelect">Please select a Sapelli file</string>
    <string name="invalidFile">File could not be found or is not readable.</string>
    <string name="noBareXMLProjects">The loading of bare XML files is no longer supported. Please package your project in a .sap file.</string>
    <string name="unsupportedExtension">Unsupported Sapelli project file extension (%1$s), supported extensions are %2$s. Do you want to try loading a project from this file anyway?</string>
    <string name="projectLoading">Loading project …</string>
    <string name="projectRemoving">Removing project …</string>
    <string name="sapelliFileLoadFailure">Failed to load or store Sapelli project (source: %1$s).\nCause: %2$s</string>
    <string name="parsingWarnings">Parsing issues</string>
    <string name="projectLoadingWarnings">Project loading issues</string>
    <string name="missingFiles">These files could not be found</string>
    <string name="downloading">Downloading …</string>
    <string name="connectionError">Connection error. Please check if you are connected to the Internet and try again.</string>
    <string name="downloadError">Download error. Please check if you are connected to the Internet.</string>
    <string name="downloadErrorWithCause">Download error: %s.\nPlease check if you are connected to the Internet.</string>
    <string name="photoCameraErrorFatal">Cannot detect camera to take mandatory picture; cancelling record and exiting project&#8230;</string>
    <string name="videoCameraErrorFatal">Cannot detect camera to record mandatory video; cancelling record and exiting project&#8230;</string>
    <string name="photoCameraErrorSkip">Cannot detect camera to take picture; skipping field \"%1$s\"&#8230;</string>
    <string name="videoCameraErrorSkip">Cannot detect camera to record video; skipping field \"%1$s\"&#8230;</string>
    <string name="data">Collected data</string>
    <string name="records">Records</string>
    <string name="media_files">Media files</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="variant">Variant</string>
    <string name="version">Version</string>
    <string name="fingerprint">Finger print</string>
    <string name="numForms">Number of forms</string>
    <string name="modelID">Model ID</string>
    <string name="storageError">Storage error: %s</string>
    <string name="needsStorageAccess">needs write access to the external/mass storage in order to function. Please insert an SD card and restart the application.</string>
    <string name="unavailableStorageAccess">Previously used file storage medium has become inaccessible, possibly due to the removal of an SD card or the device being connected to a PC.\nThe application will now exit.\nWhat would you like to happen when you restart it? It can either try using another storage medium, or retry the current medium. In the latter case please first re-insert SD card or disconnect from computer before restarting.</string>
    <string name="useAlternativeStorage">Try another …</string>
    <string name="insertSDcard">Retry current …</string>
    <string name="txtNullModeCreate">— Touch to set —</string>
    <string name="txtNullModeEdit">— Touch to edit —</string>
    <string name="txtNullModeDisabled">(no value set)</string>
    <string name="txtValidationErrorMissing">Non-optional field requires a value.</string>
    <string name="txtValidationErrorShort">Minimum length of %d characters not reached.</string>
    <string name="txtValidationErrorLong">Maximum length of %d characters exceeded.</string>
    <string name="txtValidationErrorrPattern">Pattern mismatch</string>
    <string name="txtValidationErrorInvalid">Invalid input.</string>
    <string name="txtValidationErrorInvalidNumber">Invalid numeric input.</string>
    <string name="txtValidationOptionalHint">To leave blank, hit backspace until cross appears.</string>
    <string name="lstPleaseSelect">— Please select —</string>
    <string name="lstUndoSelection">— No selection —</string>
    <string name="storageAccessFail">Could not access project or transmission storage, due to: %s.</string>
    <string name="enableLocationProvider">Please enable location provider (%s) in device settings.</string>
    <string name="noDeviceID">Failed to generate a unique identifier for your device.</string>
    <string name="selectProject">Please select a project.</string>
    <string name="removeProjectConfirm">Are you sure you want to remove project \"%s\"?\nNo collected data will be deleted.</string>
    <string name="demoLoadFail">Could not load demo project.</string>
    <string name="chooseSapelliFile">Choose a .sapelli or .sap  file</string>
    <string name="projectLoadFailure">Could not find project %1$s[id: %2$d; fingerprint: %3$d].</string>
    <string name="shortcutRemoved">Shortcut was removed.</string>
    <string name="noProjectSpecified">CollectorActivity started without project-specifying intent parameters, don\'t know which project to load.</string>
    <string name="criteria">Criteria</string>
    <string name="output">Output</string>
    <string name="expand_transmission">Expand Transmission Settings</string>
    <string name="expand_export">Expand Export Settings</string>
    <string name="add_project">Please add a project by clicking the \"＋\" above…</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="load_projects">Loading projects</string>
    <string name="title_activity_export">Sapelli Collector Exporter</string>
    <string name="export">Export</string>
    <string name="exportEtc">Export…</string>
    <string name="exportSelection">Select records to export:</string>
    <string name="exportSelectedProj">All records of %s</string>
    <string name="exportAllProjTitle">Export all projects</string>
    <string name="exportAllProjMsg">Here you can export records of all projects, even deleted ones.</string>
    <string name="exportDateRange">Date range:</string>
    <string name="exportDateRangeFrom">From %s</string>
    <string name="exportDateRangeTo">To %s</string>
    <string name="exportDateRangeAnytime">anytime</string>
    <string name="exportDestination">Destination:</string>
    <string name="exportFormat">Output format:</string>
    <string name="exportXMLMode">Composite columns:</string>
    <string name="exportCSVSeparator">CSV separator:</string>
    <string name="exportRemove">Delete records after successful export</string>
    <string name="exportFetching">Fetching records…</string>
    <string name="exportQueryFailed">Failed to query for records, due to: %s.</string>
    <string name="exportNoOutputFolder">Cannot run export due to unknown distination folder.</string>
    <string name="exportNoRecordsFound">No records meeting export criteria were found.</string>
    <string name="exportXRecords">Exporting %d records …</string>
    <string name="exportSuccessTitle">Success</string>
    <string name="exportSuccessMsg">Successfully exported %1$d records to %2$s.</string>
    <string name="exportPartialSuccessTitle">Partial success</string>
    <string name="exportPartialSuccessMsg">Successfully exported %1$d records to %2$s, but failed to export %3$d additional records due to: %4$s.</string>
    <string name="exportDeleteConfirm">Do you want to delete the exported records?</string>
    <string name="exportFailureTitle">Failure</string>
    <string name="exportFailureMsg">Failed to export any records to %1$s, due to: %2$s.</string>
    <string name="exportDeleteFailureMsg">Failed to delete (some of) the records, due to: %s.</string>
    <string name="backup">Back-up</string>
    <string name="receiver">Receiver:</string>
    <string name="interval">Interval:</string>
    <string name="minutes">minutes</string>
    <string name="selectReceiver">Select receiver:</string>
    <string name="addReceiver">Add receiver</string>
    <string name="editReceiver">Edit receiver</string>
    <string name="cycleInOutOfAirplaneMode">Cycle in &amp; out of airplane mode</string>
    <string name="receiverName">Name:</string>
    <string name="receiverPhoneNumber">Phone number:</string>
    <string name="useBinarySMS">Use binary SMS</string>
</resources>