<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblAddReceiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addReceiver"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblEditReceiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editReceiver"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblReceiverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/receiverName" />

    <EditText
        android:id="@+id/txtReceiverName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblReceiverPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/receiverPhoneNumber" />

    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <CheckBox
        android:id="@+id/chkBinarySMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/useBinarySMS" />

</LinearLayout>