<?xml version="1.0" encoding="utf-8"?>
<!--
	Sapelli data collection platform: http://sapelli.org
	
	Copyright 2012-2014 University College London - ExCiteS group
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	    http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto" >

    <!-- action buttons -->
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:onClick="browse"
        android:title="@string/add_project"
        compat:showAsAction="always"/>
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_discard"
        android:onClick="removeDialog"
        android:title="@string/remove_project"
        compat:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/settings"
        compat:showAsAction="always">
        <menu>
            <group android:id="@+id/groupLoad" >
                <item
                    android:icon="@drawable/ic_action_new"
                    android:onClick="browse"
                    android:title="@string/add_project"/>
                <item
                    android:id="@+id/scan_qr"
                    android:onClick="scanQR"
                    android:title="@string/scan_qr_code"/>
                <item
                    android:onClick=""
                    android:title="Load project from URL"/>
            </group>
            <group android:id="@+id/groupData" >
                <item
                    android:id="@+id/export_all"
                    android:onClick="exportRecords"
                    android:title="@string/exportAllProj"/>
                <item
                    android:id="@+id/backup"
                    android:icon="@android:drawable/ic_menu_save"
                    android:onClick="backupSapelli"
                    android:showAsAction="always"
                    android:title="@string/backup"/>
            </group>
            <item
                android:id="@+id/about"
                android:onClick="openAboutDialog"
                android:title="@string/about"/>
        </menu>
    </item>

    <!--
     <item
        android:id="@+id/import_records_menuitem"
        android:icon="@drawable/ic_menu_archive"
        android:onClick="importRecords"
        android:showAsAction="always"
        android:title="@string/import_records_menuitem"/> 
    -->

</menu>