<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectReceiver" />

    <ListView
        android:id="@+id/ProjectsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:cacheColorHint="#fff"
        android:choiceMode="singleChoice"
        android:divider="@color/grey"
        android:dividerHeight="1dip" >

        <requestFocus />
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        <Button
	            android:id="@+id/btnEditReceiver"
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/edit" />
	
	        <Button
	            android:id="@+id/btnDeleteReceiver"
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/delete" />
        </LinearLayout>
        
        <Button
            android:id="@+id/btnAddREceiver"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/add" />

    </RelativeLayout>

</LinearLayout>