<?xml version="1.0" encoding="utf-8"?>
<!--
	Sapelli data collection platform: http://sapelli.org
	
	Copyright 2012-2014 University College London - ExCiteS group
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	    http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/groupReceiver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="7dp"
            android:paddingLeft="0dp"
            android:paddingRight="7dp"
            android:paddingStart="0dp"
            android:text="@string/receiver" />

        <Spinner
            android:id="@+id/spinSendReceiver"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnNewScheduleReceiver"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/neww" />

            <Button
                android:id="@+id/btnEditScheduleReceiver"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/editEtc" />
            
            <Button
                android:id="@+id/btnDeleteScheduleReceiver"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/groupInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="7dp"
            android:paddingLeft="0dp"
            android:paddingRight="7dp"
            android:paddingStart="0dp"
            android:text="@string/interval" />

        <EditText
            android:id="@+id/txtSendIntervalMin"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingEnd="0dp"
            android:paddingLeft="3.5dp"
            android:paddingRight="0dp"
            android:paddingStart="3.5dp"
            android:text="@string/minutes" />
    </LinearLayout>
    
	<CheckBox
	    android:id="@+id/checkAirplaneModeCycle"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycleInOutOfAirplaneMode"
        android:enabled="false" />

    <!-- TODO heartbeat interval -->
    <!-- TODO encryption -->


    <!--
        <CheckBox
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Encrypt"
        android:enabled="false" />
    -->

</LinearLayout>