<?xml version="1.0" encoding="utf-8"?>
<!--
	Sapelli data collection platform: http://sapelli.org
	
	Copyright 2012-2014 University College London - ExCiteS group
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	    http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menuLoad">
	<item
	    android:id="@+id/miBrowse"
	    android:icon="@drawable/ic_folder_outline_white_36dp"
	    android:onClick="browse"
	    android:title="@string/browse"
	    compat:showAsAction="ifRoom" />
	<item
	    android:id="@+id/miScanQRCode"
	    android:icon="@drawable/ic_qrcode_white_36dp"
	    android:onClick="scanQR"
	    android:title="@string/scan_qr_code"
	    compat:showAsAction="ifRoom" />
	<item
	    android:id="@+id/miEnterURL"
	    android:icon="@drawable/ic_cloud_download_white_36dp"
	    android:title="@string/enter_url"
	    android:onClick="enterURL"
	    compat:showAsAction="ifRoom" />
</menu>