<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exportLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/setExportDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exportDateRange" />

            <Button
                android:id="@+id/btnExportFromDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/exportDateRangeFrom" />

            <Button
                android:id="@+id/btnExportToDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exportDateRangeTo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setExportFormat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exportDestination" />

                <Button
                    android:id="@+id/btnDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exportFormat" />

                    <Spinner
                        android:id="@+id/spinExportFormat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/layoutXMLOptions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone" >

                        <TextView
                            android:id="@+id/lblXMLMode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exportXMLMode" />

                        <Spinner
                            android:id="@+id/spinXMLMode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutCSVOptions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone" >

                        <TextView
                            android:id="@+id/lblCSVMode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exportCSVSeparator" />

                        <Spinner
                            android:id="@+id/spinCSVSeparator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ViewSwitcher>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/layoutExportOKCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnExportOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@layout/button_style"
            android:text="@string/export" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_exportSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@layout/button_style"
            android:text="@string/output" />
    </LinearLayout>

</LinearLayout>